Remove AtomicBoolean use in validators (#774)